--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/DivideSmart/backend#readme",
   "devDependencies": {
+    "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
+    "antd-mobile": "^2.2.5",
     "axios": "^0.16.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -27,8 +30,6 @@
     "css-loader": "^0.28.11",
     "d3-time-format": "^2.1.1",
     "email-validator": "^2.0.4",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
     "glob": "^7.1.2",
     "less": "^2.7.3",
@@ -36,18 +37,21 @@
     "less-vars-to-js": "^1.2.1",
     "moment-timezone": "^0.5.14",
     "msal": "^0.1.7",
+    "rc-form": "^2.2.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-progress-bar-plus": "^1.3.1",
     "react-qr-reader": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-swipeable-views": "^0.12.17",
     "react-test-renderer": "^16.4.0",
     "react-timeago": "^4.1.9",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.11.1",
     "style-loader": "^0.19.1",
+    "typeface-roboto": "^0.0.54",
     "webpack": "^4.16.1"
   }
 }
