--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-swipeable-views": "^0.12.17",
     "react-test-renderer": "^16.4.0",
     "react-timeago": "^4.1.9",
+    "react-transition-group": "^2.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.11.1",
