--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/DivideSmart/backend#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.2",
     "@material-ui/icons": "^3.0.1",
     "antd-mobile": "^2.2.5",
