--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install python3-pip
 
+cache: pip
+
 install:
   - pip install -r dev_requirements.txt
 
